Progress + 'originals' now with method summary + tweaks to run local

--- a/notebooks/originals/Lesson_5.ipynb
+++ b/notebooks/originals/Lesson_5.ipynb
@@ -5,7 +5,7 @@
    "id": "41c720d4-d5c6-4ed2-b086-5e8026c81654",
    "metadata": {},
    "source": [
-    "# L5: Direct Preferance Optimization"
+    "# L5: Direct Preference Optimization"
    ]
   },
   {
@@ -13,12 +13,44 @@
    "id": "61710203",
    "metadata": {},
    "source": [
-    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\"> ⏳ <b>Note <code>(Kernel Starting)</code>:</b> This notebook takes about 30 seconds to be ready to use. You may start and watch the video while you wait.</p>"
+    "⏳ <b>Note <code>(Kernel Starting)</code>:</b> This notebook takes about 30 seconds to be ready to use. You may start and watch the video while you wait.\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "248e9113",
+   "metadata": {},
+   "source": [
+    "## Direct Preference Optimization (DPO)\n",
+    "\n",
+    "*Teach the model to prefer better answers by directly learning from pairs of “good” and “bad” responses, without needing a reward model or complex reinforcement learning.*\n",
+    "\n",
+    "### Detailed Description\n",
+    "\n",
+    "- **What it is:**  \n",
+    "  DPO is a newer, simpler method for aligning LLMs with human preferences by directly optimising the model to favour responses that people prefer, based on binary preference data.\n",
+    "- **Why it’s used:**  \n",
+    "  DPO avoids the complexity and instability of traditional RLHF (which requires building a reward model and running RL). It is computationally lighter, faster, and easier to implement, yet achieves strong alignment with human values.\n",
+    "- **How it works:**  \n",
+    "  The model is trained on pairs of responses to the same prompt: one “chosen” (preferred) and one “rejected” (less preferred). The training objective directly increases the likelihood of the preferred response over the rejected one using a classification-style loss (binary cross-entropy), without building a separate reward model.\n",
+    "\n",
+    "### Concrete Example\n",
+    "\n",
+    "- **Inputs:**  \n",
+    "  For each prompt, two responses:  \n",
+    "  - Prompt: “Write a polite email declining an invitation.”  \n",
+    "    - Chosen: “Thank you for your invitation. Unfortunately, I won’t be able to attend.”  \n",
+    "    - Rejected: “Can’t come. Sorry.”\n",
+    "- **Method:**  \n",
+    "  The DPO algorithm adjusts the model so that it assigns higher probability to the “chosen” response than to the “rejected” one for each prompt, using only these preference pairs.\n",
+    "- **Outputs:**  \n",
+    "  A model that, when given similar prompts, is more likely to produce responses that match human preferences for tone, style, or correctness."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7e4e5c93-d470-42fc-9d85-3f791828b60f",
    "metadata": {
     "height": 64
@@ -40,22 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3c21f5c3-d96e-4642-a629-906e7396ceea",
    "metadata": {
     "height": 98
    },
    "outputs": [],
    "source": [
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
     "import transformers\n",
-    "transformers.logging.set_verbosity_error()\n"
+    "transformers.logging.set_verbosity_error()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f32346f1-1a94-4292-ac44-d39b67931582",
    "metadata": {
     "height": 132
@@ -76,7 +106,6 @@
    "id": "6b5401c6",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#fff6ff; padding:13px; border-width:3px; border-color:#efe6ef; border-style:solid; border-radius:6px\">\n",
     "<p> 💻 &nbsp; <b>Access <code>requirements.txt</code> and <code>helper.py</code> files:</b> 1) click on the <em>\"File\"</em> option on the top menu of the notebook and then 2) click on <em>\"Open\"</em>.</p>\n",
     "\n",
     "<p> ⬇ &nbsp; <b>Download Notebooks:</b> 1) click on the <em>\"File\"</em> option on the top menu of the notebook and then 2) click on <em>\"Download as\"</em> and select <em>\"Notebook (.ipynb)\"</em>.</p>\n",
@@ -95,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "69982ae0-755e-48cf-ba4c-3b83b091fd9a",
    "metadata": {
     "height": 132
@@ -113,14 +142,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "234e5b05-a493-4683-91fd-7417885efc0f",
    "metadata": {
     "height": 132
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Instruct Model (Before DPO) Output ===\n",
+      "\n",
+      "Model Input 1:\n",
+      "What is your name?\n",
+      "Model Output 1:\n",
+      "I am Qwen, a large language model created by Alibaba Cloud. My name is simply \"Qwen\".\n",
+      "\n",
+      "\n",
+      "Model Input 2:\n",
+      "Are you ChatGPT?\n",
+      "Model Output 2:\n",
+      "No, I am not ChatGPT. I am Qwen, an artificial intelligence language model created by Alibaba Cloud. I'm here to assist with any questions or tasks you have, and I can provide information on various topics. How may I help you today?\n",
+      "\n",
+      "\n",
+      "Model Input 3:\n",
+      "Tell me about your name and organization.\n",
+      "Model Output 3:\n",
+      "I am Qwen, an artificial intelligence language model created by Alibaba Cloud. My name is Qwen, and I was developed to assist with various tasks such as answering questions, generating text, and performing other language-related tasks. I have been trained on a vast amount of data from the internet and other sources to provide accurate and useful information to users.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "model, tokenizer = load_model_and_tokenizer(\"./models/Qwen/Qwen2.5-0.5B-Instruct\",\n",
+    "model, tokenizer = load_model_and_tokenizer(\"Qwen/Qwen2.5-0.5B-Instruct\",\n",
     "                                            USE_GPU)\n",
     "\n",
     "test_model_with_questions(model, tokenizer, questions,\n",
@@ -146,7 +202,7 @@
    },
    "outputs": [],
    "source": [
-    "model, tokenizer = load_model_and_tokenizer(\"./models/banghua/Qwen2.5-0.5B-DPO\", \n",
+    "model, tokenizer = load_model_and_tokenizer(\"banghua/Qwen2.5-0.5B-DPO\", \n",
     "                                            USE_GPU)\n",
     "\n",
     "test_model_with_questions(model, tokenizer, questions,\n",
@@ -168,7 +224,6 @@
    "id": "117b1810-a775-468a-91b1-5e55e67db7f6",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#fff6ff; padding:13px; border-width:3px; border-color:#efe6ef; border-style:solid; border-radius:6px\">\n",
     "<p> 💻 &nbsp; <b>Note:</b> We're performing DPO on a small model <code>HuggingFaceTB/SmolLM2-135M-Instruct</code> and a smaller training dataset to to ensure the full training process can run on limited computational resources. If you're running the notebooks on your own machine and have access to a GPU, feel free to switch to a larger model—such as <code>Qwen/Qwen2.5-0.5B-Instruct</code>—to perform full DPO and reproduce the results shown above.</p>\n",
     "</div>"
    ]
@@ -182,7 +237,7 @@
    },
    "outputs": [],
    "source": [
-    "model, tokenizer = load_model_and_tokenizer(\"./models/HuggingFaceTB/SmolLM2-135M-Instruct\", \n",
+    "model, tokenizer = load_model_and_tokenizer(\"HuggingFaceTB/SmolLM2-135M-Instruct\", \n",
     "                                            USE_GPU)"
    ]
   },
@@ -367,7 +422,7 @@
    "source": [
     "fully_trained_qwen = True\n",
     "if fully_trained_qwen:\n",
-    "    model, qwen_tokenizer = load_model_and_tokenizer(\"./models/banghua/Qwen2.5-0.5B-DPO\", \n",
+    "    model, qwen_tokenizer = load_model_and_tokenizer(\"banghua/Qwen2.5-0.5B-DPO\", \n",
     "                                            USE_GPU)\n",
     "    test_model_with_questions(model, qwen_tokenizer, questions,\n",
     "                          title=\"Post-trained Model (After DPO) Output\")\n",
@@ -376,71 +431,11 @@
     "    test_model_with_questions(dpo_trainer.model, tokenizer, questions,\n",
     "                          title=\"Post-trained Model (After DPO) Output\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "240be846-bbf0-423d-b3ee-353a6bce6f4b",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d2a42fb-9ea9-4e33-90d0-c0bf1b676439",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69bff25e-721e-43a4-91ba-8fb8991c0eb3",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f40ed7e-a0e9-44b0-a948-de5d1f289ccf",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0aefbe3-6c82-44fe-9974-c7c2a467e404",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d4586a7-8f05-4d07-8696-542937e2eab5",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "post-train-llms-dlai",
    "language": "python",
    "name": "python3"
   },
@@ -454,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
