--- a/notebooks/originals/Lesson_7.ipynb
+++ b/notebooks/originals/Lesson_7.ipynb
@@ -13,7 +13,41 @@
    "id": "5e40bef7",
    "metadata": {},
    "source": [
-    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\"> ⏳ <b>Note <code>(Kernel Starting)</code>:</b> This notebook takes about 30 seconds to be ready to use. You may start and watch the video while you wait.</p>"
+    "⏳ <b>Note <code>(Kernel Starting)</code>:</b> This notebook takes about 30 seconds to be ready to use. You may start and watch the video while you wait.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02887175",
+   "metadata": {},
+   "source": [
+    "## 3. Online Reinforcement Learning (RL)\n",
+    "\n",
+    "*Let the model try different answers, score them using a reward function (often based on human feedback), and update itself to get better scores over time.*\n",
+    "\n",
+    "### Detailed Description\n",
+    "\n",
+    "- **What it is:**  \n",
+    "  Online RL (often in the form of RLHF—Reinforcement Learning from Human Feedback) fine-tunes the LLM by having it generate outputs, scoring those outputs (with a reward model or direct human feedback), and then updating the model to maximise expected rewards.\n",
+    "- **Why it’s used:**  \n",
+    "  RL enables the model to learn complex behaviours and align with nuanced human values by optimising for long-term or subjective objectives that are hard to encode with just supervised data.\n",
+    "- **How it works:**  \n",
+    "  The process typically involves:\n",
+    "  1. Training a reward model to predict human preference scores for outputs.\n",
+    "  2. Having the LLM generate responses to prompts.\n",
+    "  3. Scoring those responses with the reward model.\n",
+    "  4. Updating the LLM’s weights using reinforcement learning algorithms (like Proximal Policy Optimization, PPO) to increase the likelihood of high-reward outputs.\n",
+    "\n",
+    "### Concrete Example\n",
+    "\n",
+    "- **Inputs:**  \n",
+    "  - Prompt: “Explain quantum computing to a 10-year-old.”  \n",
+    "  - Model generates several responses.\n",
+    "  - Human or reward model scores each response (e.g., clarity, accuracy, tone).\n",
+    "- **Method:**  \n",
+    "  The model is updated to increase the probability of generating responses that get higher scores, using RL algorithms and the reward model as a guide.\n",
+    "- **Outputs:**  \n",
+    "  A model that, over many iterations, learns to produce outputs that consistently align with the desired qualities (e.g., helpfulness, safety, clarity) as defined by the reward function.\n"
    ]
   },
   {
@@ -62,7 +96,6 @@
    "id": "698d6026",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#fff6ff; padding:13px; border-width:3px; border-color:#efe6ef; border-style:solid; border-radius:6px\">\n",
     "<p> 💻 &nbsp; <b>Access <code>requirements.txt</code> and <code>helper.py</code> files:</b> 1) click on the <em>\"File\"</em> option on the top menu of the notebook and then 2) click on <em>\"Open\"</em>.</p>\n",
     "\n",
     "<p> ⬇ &nbsp; <b>Download Notebooks:</b> 1) click on the <em>\"File\"</em> option on the top menu of the notebook and then 2) click on <em>\"Download as\"</em> and select <em>\"Notebook (.ipynb)\"</em>.</p>\n",
@@ -218,7 +251,7 @@
    },
    "outputs": [],
    "source": [
-    "model, tokenizer = load_model_and_tokenizer(\"./models/Qwen/Qwen2.5-0.5B-Instruct\", USE_GPU)"
+    "model, tokenizer = load_model_and_tokenizer(\"Qwen/Qwen2.5-0.5B-Instruct\", USE_GPU)"
    ]
   },
   {
@@ -316,7 +349,6 @@
    "id": "54dbb05d-fde6-4de4-8263-ea2057060045",
    "metadata": {},
    "source": [
-    "<div style=\"background-color:#fff6ff; padding:13px; border-width:3px; border-color:#efe6ef; border-style:solid; border-radius:6px\">\n",
     "<p> 💻 &nbsp; <b>Note:</b> We're performing GROP on a small model <code>HuggingFaceTB/SmolLM2-135M-Instruct</code> and a smaller training dataset to to ensure the full training process can run on limited computational resources. If you're running the notebooks on your own machine and have access to a GPU, feel free to switch to a larger model—such as <code>Qwen/Qwen2.5-0.5B-Instruct</code>—to perform full GRPO and reproduce the results shown above.</p>\n",
     "</div>"
    ]
@@ -332,7 +364,7 @@
    "source": [
     "## If this block hangs or the kernel restarts during training, please skip loading the previous 0.5B model for evaluation\n",
     "\n",
-    "model, tokenizer = load_model_and_tokenizer(\"./models/HuggingFaceTB/SmolLM2-135M-Instruct\", USE_GPU)\n",
+    "model, tokenizer = load_model_and_tokenizer(\"HuggingFaceTB/SmolLM2-135M-Instruct\", USE_GPU)\n",
     "\n",
     "grpo_trainer = GRPOTrainer(\n",
     "    model=model,\n",
@@ -373,7 +405,7 @@
    "source": [
     "fully_trained_qwen = True\n",
     "if fully_trained_qwen:\n",
-    "    model, tokenizer = load_model_and_tokenizer(\"./models/banghua/Qwen2.5-0.5B-GRPO\", \n",
+    "    model, tokenizer = load_model_and_tokenizer(\"banghua/Qwen2.5-0.5B-GRPO\", \n",
     "                                            USE_GPU)\n",
     "else:\n",
     "    model = grpo_trainer.model\n",
@@ -401,66 +433,6 @@
     "accuracy = sum(rewards) / len(rewards)\n",
     "print(f\"Evaluation Accuracy: {accuracy:.2%}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39edfd3c-0ea7-43cd-90d6-6c0d8e2216e6",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ffa3e26-e46c-409f-be94-7475e6c91dbe",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5af5db8c-fe2c-46e5-b9ab-2ce6ec309fb1",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ea8623c-8125-48bf-b482-8147b0d75831",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d2a42fb-9ea9-4e33-90d0-c0bf1b676439",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c7b1cfb-6cc0-4a76-be8a-a1a10f60b7b9",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
