--- a/notebooks/originals/Lesson_3.ipynb
+++ b/notebooks/originals/Lesson_3.ipynb
@@ -13,7 +13,37 @@
    "id": "68ec12b0",
    "metadata": {},
    "source": [
-    "<p style=\"background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\"> ⏳ <b>Note <code>(Kernel Starting)</code>:</b> This notebook takes about 30 seconds to be ready to use. You may start and watch the video while you wait.</p>"
+    "⏳ <b>Note <code>(Kernel Starting)</code>:</b> This notebook takes about 30 seconds to be ready to use. You may start and watch the video while you wait.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "475b323d",
+   "metadata": {},
+   "source": [
+    "## Supervised Fine-Tuning (SFT)\n",
+    "\n",
+    "*Teach the model to give ideal answers by showing it lots of example questions and the best possible responses.*\n",
+    "\n",
+    "### Detailed Description\n",
+    "\n",
+    "- **What it is:**  \n",
+    "  SFT is the process of further training a pre-trained LLM on a curated dataset of input-output pairs (prompts and ideal responses), usually labelled or written by humans.\n",
+    "- **Why it’s used:**  \n",
+    "  While pre-training gives the model broad language ability, SFT teaches it to follow instructions, adopt a specific style, or perform specialised tasks by mimicking high-quality examples.\n",
+    "- **How it works:**  \n",
+    "  The model is trained using standard supervised learning (cross-entropy loss), adjusting its weights to increase the likelihood of producing the target outputs when given the corresponding inputs.\n",
+    "\n",
+    "### Concrete Example\n",
+    "\n",
+    "- **Inputs:**  \n",
+    "  A dataset of pairs like:  \n",
+    "  - Input: “Summarise the following article: ...”  \n",
+    "  - Output: “This article discusses ...”\n",
+    "- **Method:**  \n",
+    "  The model is trained to map each input to its corresponding output, learning to generate the desired response when given a similar prompt.\n",
+    "- **Outputs:**  \n",
+    "  A model that, when prompted with similar instructions, produces responses that closely match the style and content of the curated examples."
    ]
   },
   {
@@ -234,7 +264,7 @@
    },
    "outputs": [],
    "source": [
-    "model, tokenizer = load_model_and_tokenizer(\"./models/Qwen/Qwen3-0.6B-Base\", USE_GPU)\n",
+    "model, tokenizer = load_model_and_tokenizer(\"Qwen/Qwen3-0.6B-Base\", USE_GPU)\n",
     "\n",
     "test_model_with_questions(model, tokenizer, questions, \n",
     "                          title=\"Base Model (Before SFT) Output\")\n",
@@ -261,7 +291,7 @@
    },
    "outputs": [],
    "source": [
-    "model, tokenizer = load_model_and_tokenizer(\"./models/banghua/Qwen3-0.6B-SFT\", USE_GPU)\n",
+    "model, tokenizer = load_model_and_tokenizer(\"banghua/Qwen3-0.6B-SFT\", USE_GPU)\n",
     "\n",
     "test_model_with_questions(model, tokenizer, questions, \n",
     "                          title=\"Base Model (After SFT) Output\")\n",
@@ -296,8 +326,18 @@
    },
    "outputs": [],
    "source": [
-    "model_name = \"./models/HuggingFaceTB/SmolLM2-135M\"\n",
+    "model_name = \"HuggingFaceTB/SmolLM2-135M\"\n",
     "model, tokenizer = load_model_and_tokenizer(model_name, USE_GPU)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3faa0673",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = load_dataset(\"banghua/DL-SFT-Dataset\")[\"train\"]"
    ]
   },
   {
@@ -309,11 +349,50 @@
    },
    "outputs": [],
    "source": [
-    "train_dataset = load_dataset(\"banghua/DL-SFT-Dataset\")[\"train\"]\n",
     "if not USE_GPU:\n",
-    "    train_dataset=train_dataset.select(range(100))\n",
-    "\n",
+    "    train_dataset=train_dataset.select(range(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e51649ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "display_dataset(train_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d07a18f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.backends.mps.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e85f8766",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if torch.backends.mps.is_available():\n",
+    "    torch.mps.empty_cache()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6848529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the whole dataset for training\n",
+    "train_dataset = load_dataset(\"banghua/DL-SFT-Dataset\")[\"train\"]"
    ]
   },
   {
@@ -333,9 +412,18 @@
     "    gradient_accumulation_steps=8, # Number of steps before performing a backward/update pass to accumulate gradients.\n",
     "    gradient_checkpointing=False, # Enable gradient checkpointing to reduce memory usage during training at the cost of slower training speed.\n",
     "    logging_steps=2,  # Frequency of logging training progress (log every 2 steps).\n",
-    "\n",
+    "    bf16=False,      # Disable bfloat16 (required for CPU or unsupported GPU)\n",
+    "    fp16=False,      # Disable float16 (required for CPU or unsupported GPU)\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "052aa2f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -383,67 +471,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc2d5896-6fd6-43d2-85f1-dacbd594f4cf",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a3c0bba-984a-494c-8374-33db30ad1da6",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5521a00a-88d8-4ad9-b134-12ea94e76984",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecddf372-7382-41ed-bc3d-ead2eef33201",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9841d1c8-c4d5-43e9-9d1e-1f267057279a",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b64a77d2-3338-4a8f-b634-d25be5b19407",
-   "metadata": {
-    "height": 30
-   },
+   "id": "6b53cbaa",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "post-train-llms-dlai",
    "language": "python",
    "name": "python3"
   },
@@ -457,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
